Add staged migration path to team summary
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>